--- a/memory-card/src/index.css
+++ b/memory-card/src/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -22,19 +26,24 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+body, html {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; 
+  background-color: rgb(203, 233, 205);
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
+#gameover, #youwon {
+  font-size: 3em; 
+  text-align: center; 
+  margin-bottom: 20px; 
+}
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -67,33 +76,80 @@ button:focus-visible {
   }
 }
 
-#root{
-  width:100%;
+#root {
+
+  height: 90%;
+  width: auto;
+  margin:20px;
 }
-#memoryholder {
+
+#container {
+  height: 100%;
+  width: 100%;
+  display: grid; 
+  text-align: center;
+  padding: 20px 30px 20px 10px;
+  box-sizing: border-box; 
+}
+#header {
+  display: grid;
+  grid-template-columns: 2fr; 
+  grid-template-rows: 1fr auto; 
+  position: relative;
+}
+
+#turntracker {
+  background-color: bisque;
+  height: 50px;
+  width: 100px;
+  justify-self: end; 
+  align-self: start; 
+  padding:10px;
+  box-sizing: border-box;
+  grid-column: 1;
+  grid-row: 1;
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  border: 2px solid black; }
+
+  #memoryholder {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(6, 1fr); /* 4 cards per row */
-  grid-gap: 20px; /* Adjust the gap between cards */
-  margin: 20px; /* Optional: Add margin around the grid */
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 20px; 
+  margin: 20px; 
 }
 
 
 .memorycard {
-  /* Optional: You can add some styles for the individual MemoryCard */
   box-sizing: border-box;
   background-color:bisque;
   border-radius: 8px;
   padding: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border: 2px solid black; /* Adds a black border around the card */
+  border: 2px solid black; 
+}
+.memorycard:hover {
+  transform: scale(1.05); 
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
+}
+.memorycard {
+  transition: transform 0.3s ease;
+}
+
+.memorycard:hover {
+  transform: rotate(3deg); 
+}
+.memorycard:hover {
+  border-color: darkred; 
 }
 .memorycard img {
-  width: 175px;
+  width: 140px;
   height: auto;
   border-radius: 8px;
 }
 .memorycard h3 {
-  padding: 2px; /* Adjust the padding of h3 */
-  margin: 0; /* Optional: remove any default margin */
+  padding: 2px;
+  margin: 0; 
 }
